Start work on new nav bar
